# little_lambda

./: .pre-commit-config.yaml  README.md  pyproject.toml
little_lambda/: __init__.py  _little_lambda.py  little_lambda.py
